trying to fix cool subtitle here box placement discrepency between live server and github pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,8 @@ a:visited {
   color:#464950;
   background-color: #92cbcc;
   right: 70px;
-  bottom: 1150px
+  bottom: 1150px;
+  z-index: 1;
 
 
 }
