--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ h1 {
   margin-left:0px;
 }
 
+h3, h4, h5 {
+  font-size: 20px;
+}
+
 
 a:link {
     color: #92cbcc;
@@ -36,10 +40,8 @@ a:visited {
   color:#464950;
   background-color: #92cbcc;
   right: 70px;
-  bottom: 1150px;
+  bottom: 650px;
   z-index: 1;
-
-
 }
 
 
@@ -105,18 +107,54 @@ a:visited {
     
 }
 
-.thecontent ul {
+.thecontent ul, a {
   padding-left: 0;
-  justify-content: space-between;
+  font-size: 20px;
+  text-align: center;
+
 }
 
 .thecontent a {
   color: black;
   border-bottom:3px solid #445876;
+
+}
+
+.reports {
+  display: grid;
+  font-size: 20px;
+  height: 100%;
+  width: 100%;
 }
 
 
+.surf, h3{
+  width: 100%;
+  /* height: 100%; */
+  background-image: url(../images/surf.jpg);
+}
 
+.led {
+
+  background-image: url(../images/led.jpg);
+  
+}
+
+.calc {
+
+  background-image: url(../images/calculator.jpg);
+
+}
+
+.pastel {
+  
+  background-image: url(../images/puzzle.jpg)
+}
+
+.run {
+  
+  background-image: url(../images/running.jpg)
+}
 @media screen and (max-width: 768px) {
     body {
       flex-direction: column;
