--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
   }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1 {
   font-size: 30px;
   margin: 5px;
@@ -11,8 +15,20 @@ h1 {
 
 h3, h4, h5 {
   font-size: 20px;
+  background-color: #92cbcc;
+  margin-top: 70px;
+  margin-bottom: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: fit-content;
 }
 
+h3 {
+ margin-top: 400px;
+ width: 125px;
+ height: fit-content;
+}
 
 a:link {
     color: #92cbcc;
@@ -25,7 +41,7 @@ a:visited {
 /* This is the image below navbar  */
 .imgback {
   background-image: url(../images/background.jpg);
-  height: 130px;
+  height: 170px;
   width: 100%;
   margin: 0 0;
   margin-top: 0;
@@ -40,7 +56,7 @@ a:visited {
   color:#464950;
   background-color: #92cbcc;
   right: 70px;
-  bottom: 650px;
+  bottom: 1110px;
   z-index: 1;
 }
 
@@ -80,9 +96,8 @@ a:visited {
 .grid1 {
   display: grid;
   grid-template-columns: 0.17fr 1fr;
-  row-gap: 5ch;
+  row-gap: 4ch;
 }
-
 
 
 .sidebox {
@@ -102,14 +117,14 @@ a:visited {
   border-left-color: #445876;
   padding-left: 25px;
   color: #445876;
-  line-height: me;
-  
-    
+
 }
 
-.thecontent ul, a {
-  padding-left: 0;
-  font-size: 20px;
+
+
+.thecontent ul {
+  margin-top: 50px;
+  flex-grow: 5 ;
   text-align: center;
 
 }
@@ -117,44 +132,74 @@ a:visited {
 .thecontent a {
   color: black;
   border-bottom:3px solid #445876;
-
+  margin: 20px;
+  
 }
 
 .reports {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   font-size: 20px;
-  height: 100%;
-  width: 100%;
+  justify-content: center;
+  
 }
 
 
-.surf, h3{
+.surf{
   width: 100%;
   /* height: 100%; */
-  background-image: url(../images/surf.jpg);
+  background-image: url(../images/surfbetter.jpg);
+  opacity: .5;
 }
 
-.led {
+.surf:hover {
+  opacity: 1;
+}
 
+
+.led {
+  flex: 1 1 33%;
+  width: fit-content;
   background-image: url(../images/led.jpg);
-  
+  opacity: .5;
+}
+
+.led:hover {
+  opacity: 1;
 }
 
 .calc {
-
+  flex: 1 1 36%;
+  width: fit-content;
   background-image: url(../images/calculator.jpg);
+  opacity: .5;
 
+}
+
+.calc:hover {
+  opacity: 1;
 }
 
 .pastel {
-  
-  background-image: url(../images/puzzle.jpg)
+  flex: 1 1 33%;
+  background-image: url(../images/puzzle.jpg);
+  opacity: .5;
+}
+
+.pastel:hover {
+opacity: 1;
 }
 
 .run {
-  
-  background-image: url(../images/running.jpg)
+  flex: 1 1 36%;
+  background-image: url(../images/running.jpg);
+  opacity: .5;
 }
+
+.run:hover {
+  opacity:1;
+}
+
 @media screen and (max-width: 768px) {
     body {
       flex-direction: column;
